fix: overflow hidden added

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,6 +7,7 @@
 html,
 body {
   height: 100%;
+  background-color:"red"
   /* max-width: 100vw; */
   /* overflow-x: hidden; */
 }
@@ -22,14 +23,14 @@ a {
 
 .height-100 {
   height: 100%;
+  overflow:hidden;
 }
 
 .iframe-cont {
   width: 100%;
   height: 100%;
   display:block;
-  /* height: 90vh;
-  overflow: hidden; */
+  overflow: hidden;
 }
 
 @media (prefers-color-scheme: dark) {
